<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.hbln.smsintercept.ui.activity.HomeActivity">

    <FrameLayout
        android:id="@+id/frag_container"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1" />

    <View style="@style/view_line" />

    <RadioGroup
        android:id="@+id/rg_home_tab"
        android:layout_width="match_parent"
        android:layout_height="@dimen/x48"
        android:orientation="horizontal">

        <RadioButton
            android:id="@+id/rb_home_0"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:button="@null"
            android:drawableTop="@drawable/select_home_tab_0"
            android:gravity="center"
            android:paddingTop="@dimen/x8"
            android:text="@string/sms"
            android:textColor="@color/select_home_tab"
            android:textSize="@dimen/t12" />

        <RadioButton
            android:id="@+id/rb_home_1"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:button="@null"
            android:drawableTop="@drawable/select_home_tab_1"
            android:gravity="center"
            android:paddingTop="@dimen/x8"
            android:text="@string/home"
            android:textColor="@color/select_home_tab"
            android:textSize="@dimen/t12" />

        <RadioButton
            android:id="@+id/rb_home_2"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:button="@null"
            android:drawableTop="@drawable/select_home_tab_2"
            android:gravity="center"
            android:paddingTop="@dimen/x8"
            android:text="@string/setting"
            android:textColor="@color/select_home_tab"
            android:textSize="@dimen/t12" />
    </RadioGroup>
</LinearLayout>
